# overhead

./: README.md  bulbs.json  devices.json  index.html  package.json  plugs.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.css  App.tsx  Logo.tsx  Settings.tsx  bindings.ts  global.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  discovery.rs  lib.rs  main.rs  messages.rs  utils.rs
src-tauri/src/tplink/: capabilities.rs  devices.rs  discover.rs  error.rs  mod.rs  models.rs  protocol.rs  requests.rs
