[package]
name = "overhead"
version = "0.1.0"
description = "A Tauri App"
authors = ["alexeden"]
edition = "2021"

[lib]
name = "overhead_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
byteorder = "1"
log = { version = "0.4", default-features = false }
network-interface = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
