[package]
name = "overhead"
version = "0.1.0"
description = "A Tauri App"
authors = ["alexeden"]
edition = "2021"

[lib]
name = "overhead_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
byteorder = "1"
log = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.20", features = [] }
specta-typescript = "0.0.7"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
